apps/frontend/src/modules/common/components/button/index.module.css
.button {
  @apply inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:bg-gray-200  disabled:text-gray-500 disabled:cursor-not-allowed;
}

.disabled-button.button {
  @apply bg-gray-200 text-gray-500 cursor-not-allowed;
}

.default-button.button {
  @apply bg-primary text-primary-foreground hover:opacity-90 border-primary border-[1.25px] disabled:bg-gray-200  disabled:text-gray-500;
}

.base-size.button {
  @apply h-10 w-20 px-4 py-2 text-sm;
}

.sm-size.button {
  @apply h-9 w-14 rounded-md px-3 text-sm;
}

.lg-size.button {
  @apply h-10 w-40 rounded-md px-8 text-sm;
}

.xl-size.button {
  @apply w-60 sm:w-96 h-12 text-sm;
}

.icon-size.button {
  @apply text-xs h-8 w-8;
}

.big-icon.button {
  @apply text-sm h-10 w-10;
}

.destructive-button.button {
  @apply bg-destructive text-destructive-foreground hover:bg-destructive/90;
}

.outline-button.button {
  @apply border border-primary text-primary bg-background hover:bg-accent disabled:bg-gray-200 disabled:text-gray-500;
}

.secondary-button.button {
  @apply bg-muted text-primary hover:bg-secondary/80;
}

.ghost-button.button {
  @apply hover:bg-accent hover:text-accent-foreground;
}

.link-button.button {
  @apply text-primary;
}

